examples/test/testpolicy10114.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10114
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key15: value30
      key40: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value48
          key26: value21
      podSelector:
        matchLabels:
          key43: value22
          key49: value11
